--- a/Laboratory1/app/src/main/res/values/strings.xml
+++ b/Laboratory1/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Laboratory#1</string>
     <string name="button">Button</string>
+    <string name="textview">TextView</string>
+    <string name="go_home">GO HOME</string>
 </resources>
