--- a/Laboratory1/app/src/main/res/values/strings.xml
+++ b/Laboratory1/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 
     <string name="app_name">My application</string>
 
+    <string name="navigation_drawer_open">Drawer open</string>
+    <string name="navigation_drawer_close">Drawer close</string>
+
     <!--    Menu Navigation-->
     <string name="nav_menu_posts">Posts</string>
     <string name="nav_bar_randomise">Random</string>
