--- a/Laboratory1/app/src/main/res/values/strings.xml
+++ b/Laboratory1/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="navigation_drawer_open">Drawer open</string>
     <string name="navigation_drawer_close">Drawer close</string>
 
+    <!--    Login Activity-->
+
+    <string name="email_input_hint">Email</string>
+    <string name="password_input_hint">Password</string>
+    <string name="login_button_name">Login</string>
+
     <!--    Menu Navigation-->
     <string name="nav_menu_posts">Posts</string>
     <string name="nav_bar_randomise">Random</string>
